--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
         <!-- Services 3-->
         <div class="services__content">
             <div>
-                <i class="uil uil-pen services__icon"></i>
+                <i class="services__icon"><span class="iconify" data-icon="fluent:window-dev-tools-20-filled"></span></i>
                 <h3 class="services__title">Other <br>Tools </h3>
             </div>
             <span class="button button--flex button--small button--link services__button">
