--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         -0.149132 97.9666 0.00163737C136.23 0.303176 174.193 10.857 190.312 36.4879Z">
 
                         </path>
-                        <image class="home__blob-img" x='0' y='1' xlink:href="images/pic2.jpg"/>
+                        <image class="home__blob-img" x='0' y='1' xlink:href="images/pic1.jpg"/>
                     </g>
                   </svg>   
             </div>
@@ -140,7 +140,7 @@
     <h2 class="section__title">About Me</h2>
     <span class="section__subtitle">My introduction</span>
     <div class="about__container container grid">
-        <img src="images/pic1.jpg" alt="" class="about__img">
+        <img src="images/hijabbbbb.png" alt="" class="about__img">
         <div class="about__data">
           <p class="about__description" >This is Sholi. A 22 year old tech enthusiast girl. I'm very much interested in Data Science. My preferred research fields are ML, Computer Vision, Deep Learning.<br> As a person, i am very punctual ,dedicated and fun loving.<br> Thank you.</p>
           <div class="about__info">
@@ -720,48 +720,18 @@
       <div class="project__bg">
           <div class="project__container container grid">
               <div class="project__data">
-                  <h2 class="project__title">Have you any query???</h2>
+                  <h2 class="project__title">Have you any queries???</h2>
                   <p class="project__description">Get in touch with me</p>
                   <a href="#contact" class="button button--flex button--white">
                       Contact Me
                       <i class="uil uil-message project__icon button__icon"></i>
                   </a>
-              </div>
-              <img src="images/pic3.jpg" alt="" class="project__img">
-          </div>
+                </div>
+                <img src="images/purple.jpeg" alt="" class="project__img">
+            </div>
       </div>
   </section>
-    <!-- Testimonial-->
-   <section class="testimonial section">
-       <h2 class="section__title">Hey wait a second! This is for you 🌹</h2>
-       <span class="section__subtitle">Motivational Quotes</span>
-
-       <div class="testimonial__container container swiper">
-           <div class="swiper-wrapper">
-               <!-- Testimonial 1 -->
-               <div class="testimonial__content swiper-slide">
-                   <div class="testimonial__data">
-                    <div>
-                        <i class="uil uil-feedback testimonial__icon-feedback"></i>
-                   </div>
-                       <div class="testimonial__header">
-
-                           <div>
-                                <h3 class="testimonial__name">Everything has a beautiful ending.<br>If it's not beautiful, then it's not the ending.</h3>
-                                <span class="testimonial__client">~Unknown</span>
-
-                            </div>
-                       </div> 
-                       <div>
-                            <i class="uil uil-feedback testimonial__icon-feedback"></i>
-                       </div>
-                   </div> 
-               </div>
-           </div>
-           <div class="swiper-pagination swiper-pagination-testimonial"></div>
-       </div>
-   </section>
-
+   
 <!-- Contact Me-->
 
  <section class="contact section" id="contact">
