--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     
 
     
-    <title>Responsive Portfolio Website</title>
+    <title>Rubaiya Tasnim Sholi</title>
 </head>
 <body>
     <!-------Header------->
