--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             </div>
           </div>
            <div class="about__buttons">
-               <a download="" href="pdf/Rubaiya Tasnim Sholi CV.pdf" class="button button--flex">
+               <a download="" href="pdf/Rubaiya Tasnim Sholi.pdf" class="button button--flex">
                    Download CV<i class="uil uil-download-alt button__icon"></i>
                </a>
            </div>
