--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
             <div class="home__data">
                 <h1 class="home__title">Hi, This is Sholi</h1>
-                <h3 class="home__subtitle">Computer Science Student</h3>
+                <h3 class="home__subtitle">Computer Science Graduate</h3>
                 <p class="home__description">Interested in becoming a machine learning engineer as well as
                     passionate about<br> data analysis
                 </p>
@@ -149,7 +149,7 @@
     <div class="about__container container grid">
         <img src="images/hijabbbbb.png" alt="" class="about__img">
         <div class="about__data">
-          <p class="about__description" >This is Sholi. A 22 year old Data enthusiast girl. I'm very much interested in Data Science. My preferred research fields are ML, Computer Vision, Deep Learning.<br> As a person, i am very punctual ,dedicated and fun loving.<br> Thank you.</p>
+          <p class="about__description" >This is Sholi. A 23 year old Data enthusiast girl. I'm very much interested in Data Science. My preferred research fields are ML, Computer Vision, Deep Learning.<br> As a person, i am very punctual ,dedicated and fun loving.<br> Thank you.</p>
           <div class="about__info">
               <div>
                   <span class="about__info-title">03+</span>
@@ -342,7 +342,7 @@
                 <div class="qualification__data">
                     <div>
                         <h3 class="qualification__title">Computer Science and Engineering</h3>
-                        <span class="qualification__subtitle">Daffodil International University<br><br> CGPA: 3.80</span>
+                        <span class="qualification__subtitle">Daffodil International University<br><br> CGPA: 3.75</span>
                         <div class="qualification__calender"> 
                             <i class="uil uil-calendar-alt"></i>
                             2019 - 2022
@@ -420,7 +420,7 @@
                         <h3 class="qualification__title">TA in ML Course</h3>
                         <div class="qualification__calender"> 
                             <i class="uil uil-calendar-alt"></i>
-                            2021 - Ongoing
+                            2021 - 2022
                         </div>
                     </div>
                 </div>
@@ -680,6 +680,22 @@
                 </div>
             </div>
             
+            <!-- Portfolio 3.2-->
+            <div class="portfolio__content grid swiper-slide">
+                <img src="images/powerBI.png" alt="" class="portfolio__img">
+                <div class="portfolio__data">
+                    <h3 class="portfolio__title">Dashboard using BI tools</h3>
+                    <p class="portfolio__description"> After ETL (Extract, Transform and Load) created a dashboard using BI Tool (PowerBI)<br>Technology used in project:<br>* PowerBI 
+                        </p>
+                     <a href="https://github.com/rubaiyat-sholi/Python_Project_Alexa" class="button button--flex button--small portfolio__button" target="_blank">
+                         Demo
+                         <i class="uil uil-arrow-right button__icon"></i>
+                     </a>
+                </div>
+            </div>
+            
+
+
               <!-- Portfolio 4-->
               <div class="portfolio__content grid swiper-slide">
                 <img src="images/alexa.png" alt="" class="portfolio__img">
