--- a/index.html
+++ b/index.html
@@ -98,8 +98,6 @@
                 <a href="https://github.com/rubaiyat-sholi" target="_blank" class="home__social-icon">
                     <i class="uil uil-github-alt"></i>
                 </a>
-
-
                 </a>
             </div>
 
@@ -890,7 +888,7 @@
                     
 
                     <a href="https://leetcode.com/Rubaiyat_Sholi/" style="color:white">
-                        <li> • LeetCode: SQL and R problems<br>
+                        <li> • LeetCode: Python, SQL and Pandas problems<br>
                         </li>
                     </a>
 
