--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <!--CSS -->
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" type="text/css" href="css/font-awesome.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.2.0/css/fork-awesome.min.css">
+
     
 
     
@@ -86,6 +88,11 @@
     <div class="home__container container grid">
         <div class="home__content grid">
             <div class="home__social">
+
+<!-- Researchgate-->
+                <a href="https://www.researchgate.net/profile/Rubaiya-Sholi" target="_blank" class="home__social-icon">
+                    <i class="fa fa-researchgate" aria-hidden="true"></i>
+                </a>
 
                 <a href="https://scholar.google.com/citations?hl=en&user=GR80dU4AAAAJ" target="_blank" class="home__social-icon">
                     <i class="uil uil-graduation-cap"></i>
