--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             </div>
           </div>
            <div class="about__buttons">
-               <a download="" href="pdf/Resume.pdf" class="button button--flex">
+               <a download="" href="pdf/CV of Rubaiya Tasnim Sholi.pdf" class="button button--flex">
                    Download CV<i class="uil uil-download-alt button__icon"></i>
                </a>
            </div>
