--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
 
             <div class="home__data">
                 <h1 class="home__title">Hi, This is Sholi</h1>
-                <h3 class="home__subtitle">Computer Science Graduate</h3>
-                <p class="home__description">A dedicated CS graduate from Bangladesh, 
-                    who is keen about pursuing a career as a researcher.
+                <h3 class="home__subtitle">Ph.D. student in Computer Science</h3>
+                <p class="home__description">A Ph.D. student at Louisiana State University,
+                    Baton Rouge, LA, USA who is keen about pursuing a career as a researcher.
                 </p>
                     <a href="#contact" class="button button--flex">
                         Contact Me <i class="uil uil-message button__icon"></i>
@@ -351,8 +351,6 @@
                         <span class="skills__percentage skills__deepl"></span>
                     </div>
                 </div>
-
-                 
                 </div>
             </div>
          </div>
@@ -377,7 +375,24 @@
         <div class="qualification__sections">
             <!--Qualification content 1-->
             <div class="qualification__content qualification__active" data-content id="education">
-                <!--Qualification  1-->
+
+                  <!--Qualification  1-->
+                  <div class="qualification__data">
+                    <div></div>
+                    <div>
+                        <span class="qualification__rounder"></span>
+                        <span class="qualification__line"></span>
+                    </div>
+                    <div>
+                        <h3 class="qualification__title">Doctor of Philosophy (Ph.D.)</h3>
+                        <Baton class="qualification__subtitle">Louisiana State University, <br>Baton Rouge, LA, USA<br><br></span>
+                        <div class="qualification__calender"> 
+                            <i class="uil uil-calendar-alt"></i>
+                            2025 - Ongoing
+                        </div>
+                    </div>
+                </div>
+                <!--Qualification  2-->
                 <div class="qualification__data">
                     <div>
                         <h3 class="qualification__title">Computer Science and Engineering</h3>
@@ -394,7 +409,7 @@
                     </div>
                 </div>
 
-                <!--Qualification  2-->
+                <!--Qualification  3-->
                 <div class="qualification__data">
                     <div></div>
                     <div>
@@ -411,7 +426,7 @@
                     </div>
                 </div>
 
-                <!--Qualification  3-->
+                <!--Qualification  4-->
                 <div class="qualification__data">
                     <div>
                         <h3 class="qualification__title">Secondary School Certificate</h3>
@@ -432,7 +447,28 @@
 
             <!--Qualification content 2-->
             <div class="qualification__content" data-content id="work">
+
+
+
                 <!--Qualification  1-->
+                <div class="qualification__data">
+                    <div></div>
+                    <div>
+                        <span class="qualification__rounder"></span>
+                        <span class="qualification__line"></span>
+                    </div>
+                    <div>
+                        <h3 class="qualification__title">Graduate Assistant</h3>
+                        <p>Louisiana State University, Baton Rouge, LA, USA<br>
+                        </p>
+                        <div class="qualification__calender"> 
+                            <i class="uil uil-calendar-alt"></i>
+                            2025 - Ongoing
+                        </div>
+                    </div>
+                </div>
+
+                <!--Qualification  2-->
                 <div class="qualification__data">
                     <div>
                         <h3 class="qualification__title">Junior Executive</h3>
@@ -449,7 +485,7 @@
                     </div>
                 </div>
 
-                <!--Qualification  2-->
+                <!--Qualification  3-->
                 <div class="qualification__data">
                     <div></div>
                     <div>
@@ -468,7 +504,7 @@
                     </div>
                 </div>
 
-                <!--Qualification  3-->
+                <!--Qualification  4-->
                 <div class="qualification__data">
                     <div>
                         <h3 class="qualification__title">Research Associate</h3>
@@ -485,7 +521,7 @@
                     </div>
                 </div>
   
-                  <!--Qualification  2-->
+                  <!--Qualification  4-->
                   <div class="qualification__data">
                     <div></div>
                     <div>
@@ -976,7 +1012,7 @@
           <div class="contact__information">
               <i class="uil uil-phone contact__icon"></i>
               <div>
-                  <h3 class="contact__title">Call Me</h3>
+                  <h3 class="contact__title">Whatsapp Me</h3>
                   <span class="contact__subtitle">+880-1798427073</span>
               </div>
           </div>
@@ -993,7 +1029,7 @@
                 <i class="uil uil-map-marker contact__icon"></i>
                 <div>
                     <h3 class="contact__title">Location</h3>
-                    <span class="contact__subtitle">Dhaka, Bangladesh</span>
+                    <span class="contact__subtitle">Baton Rouge, LA, USA</span>
                 </div>
            </div>
            <form action="" class="contact__form grid">
@@ -1034,7 +1070,7 @@
          <div class="footer__container container grid">
              <div>
                  <h1 class="footer__title">Sholi</h1>
-                 <span class="footer__subtitle">CS Graduate</span>
+                 <span class="footer__subtitle">Ph.D. Student</span>
              </div>
               <ul class="footer__links">
                   <li>
@@ -1070,9 +1106,6 @@
 </a>
 <!--Swiper JS-->
    <script src="swiper-bundle.min.js"> </script>
-  
-  
-
    <!--Main Js-->
    <script src="main.js"> </script>
 
